# wasm-native-template

./: .gitignore  .npmignore  CHANGELOG.md  Cargo.toml  README.md  index.js  package-lock.json  package.json
.github/workflows/: node-bench.yml  node-release.yml  rust.yml
scripts/: bench.js
src/: lib.rs
test/: index.test.js
