[package]
name = "index"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.74"
md5 = "0.7.0"
bcrypt = "0.10.1"
getrandom = { version = "0.2", features = ["js"] }
js-sys = "0.3.55"
wasm-bindgen-futures = "0.4.28"
sqlparser = "0.12.0"
serde_json = { version = "1.0" }