[package]
edition = "2018"
name = "index"
version = "0.1.0"
description = "the WASM native library for nodejs"
license = "MIT"
repository = "https://github.com/newdash/wasm-native-template"

[lib]
crate-type = ["cdylib"]

[dependencies]
bcrypt = "0.10.1"
getrandom = {version = "0.2", features = ["js"]}
js-sys = "0.3.55"
md5 = "0.7.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = {version = "1.0"}
sqlparser = {version = "0.12.0", features = ["json_example"]}
wasm-bindgen = "0.2.74"
wasm-bindgen-futures = "0.4.28"
serde-wasm-bindgen = "0.3.1"